fix alignment

--- a/src/ServicePulse.Host/app/css/particular.css
+++ b/src/ServicePulse.Host/app/css/particular.css
@@ -2236,6 +2236,10 @@ i.fa.pa-endpoint-lost.endpoints-overview, i.fa.pa-monitoring-lost.endpoints-over
     margin-right: 4px;
 }
 
+i.fa.pa-endpoint-lost.endpoints-overview {
+    top: 8px;
+}
+
 .endpoint-name {
     margin-top: 15px;
 }
